# Aris-AI

./: .flake8  .gitignore  README.md  README_zh.md  alice-ai.env.template  alice_api.py  alice_webui.py  aris_api.py  main.py  pyproject.toml
.github/workflows/: docker-build.yml  python-package.yml
confs/deployment/: redis.conf.template
confs/local/: redis.conf.template
docker/: Dockerfile  docker-compose.yml.template
docker/deployment/: docker-compose.yml
docker/local/: docker-compose.yml
envs/deployment/: api.env.template  neo4j.env.template  redis.env.template  webui.env.template
envs/local/: api.env.template  mysql.env.template  webui.env.template
internal/api/: __init__.py  base.py
internal/api/auth/: base.py  jwt_auth.py  sk_auth.py
internal/api/model/: request.py  response.py  v1.py
internal/api/router/: __init__.py  root.py
internal/config/: __init__.py  config.py
internal/langchain/: callback.py  chain.py  embedding.py  llm.py  memory.py  prompt.py  retriever.py  text_splitter.py
internal/logger/: __init__.py  logger.py
internal/middleware/jwt/: __init__.py  jwt.py
internal/middleware/logger/: __init__.py
internal/middleware/mysql/: __init__.py
internal/middleware/redis/: __init__.py
internal/webui/: utils.py
pages/: chat.py  vector_db.py
src/api/: __init__.py
src/api/auth/: __init__.py  jwt_auth.py  sk_auth.py
src/api/router/: root.py  (+1 more)
src/config/: __init__.py  env.py  gbl.py
src/langchain/: callback.py  chain.py  embedding.py  file_loader.py  llm.py  memory.py  retriever.py  text_splitter.py  transformers.py  url_loader.py
src/langchain_aris/: callback.py  chain.py  embedding.py  file_loader.py  llm.py  memory.py  retriever.py  text_splitter.py  transformers.py  url_loader.py
src/logger/: __init__.py  logger.py
src/webui/: utils.py
(+44 files in other folders)
