[tool.poetry]
name = "alice-ai"
version = "0.1.0"
description = "An LLM ai application"
authors = ["centonhuang", "freshsaltedfish"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langchain = "^0.1.4"
sqlalchemy = "^2.0.25"
mysql-connector-python = "^8.3.0"
pyjwt = "^2.8.0"
langchain-openai = "^0.0.5"
streamlit = "^1.31.0"
redis = "^5.0.1"
faiss-cpu = "^1.7.4"
python-multipart = "^0.0.9"
pdfminer-six = "^20231228"
markdown = "^3.5.2"
arxiv = "^2.1.0"
pymupdf = "^1.23.22"
selenium = "^4.17.2"
gitpython = "^3.1.42"
html2text = "^2024.2.26"
nbformat = "^5.9.2"
nbconvert = "^7.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
